# cubersio_v2

./: .gitignore  CLAUDE.md  readme.md
.claude/: settings.json
backend/: CLAUDE.md  pyproject.toml  requirements.txt
backend/cubersio/: events.py  main.py  svg_gen.py  types.py
backend/cubersio/models/: competition.py
backend/cubersio/routers/: competition.py
backend/cubersio/scripts/: kilo_svg_helper.py  mega_svg_helper.py
backend/cubersio/services/: competition.py  competition_persistence.py  exceptions.py  solve_stats.py
frontend/: CLAUDE.md  README.md  package-lock.json  package.json  prettier.config.js  svelte.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: CubersioIcon.svelte  EventCard.svelte  EventCardList.svelte  EventImage.svelte  HorizontalDivider.svelte  HubLandingInfo.svelte  Navbar.svelte  Spacer.svelte  TwoColumnLayout.svelte  competition.svelte.ts  fonts.css  formatSolve.ts  navigationLock.svelte.ts  types.ts  utils.ts
frontend/src/lib/util/: event_utils.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/compete/: +page.server.ts  +page.svelte  CompeteSidebar.svelte  CompetitionTimerPanel.svelte  EventCard.svelte  EventCardList.svelte  EventCompleteBanner.svelte  EventImage.svelte  EventResultsCard.svelte  PbStamp.svelte  Timer.svelte  WeekHeader.svelte  eventUtils.ts  timerUtils.ts  types.ts
frontend/src/routes/leaderboard/: +page.svelte
frontend/src/routes/practice/: +page.svelte
frontend/src/scripts/: round.js
(+11 files in other folders)
